[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]

[project]
authors = [{name = "Tradewell Tech", email = "engineering@tradewelltech.co"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "googleapis-common-protos>=1.53.0",
  "protobuf",
  "pyarrow>=16.0.0"
]
description = "Convert from protobuf to arrow and back"
documentation = "https://protarrow.readthedocs.io/en/latest/"
dynamic = ["version"]
keywords = ["apache-arrow", "protobuf", "data"]
license = "Apache-2.0"
maintainers = [{name = "0x26res", email = "0x26res@gmail.com"}]
name = "protarrow"
packages = [
  {include = "protarrow"}
]
readme = "README.md"
repository = "https://github.com/tradewelltech/protarrow"
requires-python = ">=3.9,<4"

[project.urls]
"Bug Tracker" = "https://github.com/tradewelltech/protarrow/issues"
"Changelog" = "https://github.com/tradewelltech/protarrow/blob/main/CHANGELOG.md"

[tool.bandit]
skips = ["B101", "B311"]

[tool.black]
exclude = "venv/|tox/|protarrow_protos/.*"
target-version = ["py39"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
Jinja2 = ">=3.1.2"
black = ">=22.10.0"
coverage = ">=6.5.0"
flake8 = ">=5.0.4"
git-changelog = ">=2.2.0"
grpcio-tools = ">=1.46.0"
inflection = ">=0.5.1"
isort = ">=5.10.1"
mkdocs = ">=1.4.2"
mkdocs-material = ">=9.0.3"
mkdocstrings = {version = ">=0.21.2", extras = ["python"]}
pip-tools = ">=6.12.1"
pre-commit = ">=2.20.0"
pylint = ">=2.15.0"
pytest = ">=7.2.0"
pytest-benchmark = ">=4.0.0"
pytest-cov = "*"
pytest-xdist = ">=3.1.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = {version = ">=1.0.0,<2.0.0", extras = ["plugin"]}

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__init__.py"]
folders = [{path = "protarrow"}]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "C", "I", "PERF"]

[tool.ruff.lint.isort]
known-first-party = ["protarrow", "protarrow_protos"]
